# py-faiss

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  k8s-deployment.yaml
examples/: improved_endpoints.py
scripts/: start.sh
src/: main.py
src/py_faiss/: config.py  main.py
src/py_faiss/api/v1/: api.py
src/py_faiss/api/v1/endpoints/: documents.py  health.py  search.py
src/py_faiss/core/: document_processor.py  embedding.py  faiss_persistence.py  search_engine.py  vector_store.py
src/py_faiss/services/: document_service.py  search_service.py
src/py_faiss/storage/indexes/: config.json
tests/: test_document_processor.py  test_document_processor_extract.py
